# relay

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/phases/01-transport-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-session-discovery-status/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-messaging-conversations/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-permissions-notifications/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
androidApp/: build.gradle.kts
androidApp/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
gradle/: libs.versions.toml
server/: dev.heyduk.relay-server.plist  install-service.sh  install.cjs  package-lock.json  package.json  relay-server.cjs  screen-parse.cjs
server/hooks/: activity-notify.cjs  ask-notify.cjs  permission-notify.cjs  reconcile-tabs.cjs  send-relay.cjs  session-start.cjs  session-stop.cjs
shared/: build.gradle.kts
(+152 files in other folders)
